infra/k8s/envoy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_http
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    codec_type: auto

                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: inference-service
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: inference_grpc

                    http_filters:
                      - name: envoy.filters.http.grpc_http1_bridge
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_http1_bridge.v3.Config

                      - name: envoy.filters.http.grpc_json_transcoder
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                          proto_descriptor: "/etc/envoy/inference_descriptor.pb"
                          services: ["inference.v1.InferenceService"]
                          print_options:
                            always_print_primitive_fields: true
                            preserve_proto_field_names: true

                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: inference_grpc
          connect_timeout: 1s
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: inference_grpc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: grpc-server.default.svc.cluster.local
                          port_value: 50051
          http2_protocol_options: {}
