infra/k8s/envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
